Ajustes vista informacion revistas y libros

--- a/src/index.html
+++ b/src/index.html
@@ -20,4 +20,13 @@
   <app-root></app-root>
 </body>
 
+<footer>
+  <p class="copyrightAux">David Gomez - agomezt@ucentral.edu.co</p>
+  <br>
+  <p class="copyrightAux">Santiago Alfonso - salfonsom1@ucentral.edu.co</p>
+  <br>
+  <p class="copyrightAux">Alejandra Cruz - mcruzr2@ucentral.edu.co</p>
+  <p class="copyright">Copyright © 2020 Universidad Central</p>
+</footer>
+
 </html>
